--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
     <!-- css files will be automatically insert here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    
   </head>
   <body>
     <!--[if lt IE 10]>
