--- a/src/index.html
+++ b/src/index.html
@@ -20,15 +20,15 @@
     <!-- endbuild -->
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    
+
   </head>
   <body>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <base href="/">
-    <div ng-view></div>
+    <div ui-view="navbar"></div>
+    <div ui-view="content"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -56,5 +56,6 @@
     <!-- endinject -->
     <!-- endbuild -->
 
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   </body>
 </html>
