add css styling to blog and animations for view transitions

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
     <div ui-view="navbar"></div>
-    <div ui-view="content"></div>
+    <div ui-view="content" id="main-content" class="main"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
