--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,6 @@
     <!-- endbuild -->
 
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
   </body>
 </html>
