add markdown filter to post view, tweak css

--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,7 @@
 
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.min.js"></script>
+    <script src="bower_components/showdown/src/showdown.js"></script>
+    <script src="bower_components/angular-markdown-filter/markdown.js"></script>
   </body>
 </html>
